优化模型管理模块